--- a/css/asat.css
+++ b/css/asat.css
@@ -79,7 +79,9 @@ nav a.selected {
     /*box-shadow: 50px 0 50px 0 rgba(200,200,200,0.1);*/
 }
 
-
+.list {
+    font-weight: normal !important;
+}
 
 /*============================================== /
 / ================== SECTION== ================= /
