--- a/css/asat.css
+++ b/css/asat.css
@@ -29,7 +29,7 @@ header {
     width: 100%;
     height: 50px;
     background-color: #3694D1;
-    z-index: 1;
+    z-index: 10;
 }
 header #logo {
     height: 50px;
@@ -229,6 +229,75 @@ input.chkbox {
 }
 input {
     border: 1px solid #CCCCCC!important;
+}
+
+/*============================================== /
+/ ================== DROPDOWN ================== /
+/ ============================================== */
+.scrollable-menu {
+    height: auto;
+    max-height: 300px;
+    overflow-x: hidden;
+}
+
+/*============================================== /
+/ ================== INPUT ===================== /
+/ ============================================== */
+.isValid {
+    box-shadow: 0 0 5px rgba(54, 148, 209, 0.5) inset;
+    color: #3694D1;
+}
+.isNotValid {
+    box-shadow: 0 0 5px rgba(198, 64, 61, 0.5) inset;
+    color: #c6403d;
+}
+
+.asat-group {
+    border: 1px solid gray;
+    color: gray;
+    background-color: white;
+    text-align: center;
+    padding: 1em;
+    margin: 1em;
+}
+.asat-group.half {
+    float: left;
+    margin: 0 1em;
+    width: 40%;
+}
+.asat-group.half.left {
+    float: left;
+}
+.asat-group.half.right {
+    float: right;
+}
+.asat-group > input {
+    margin-top: 1em;
+}
+.asat-group > div {
+    width: 90%;
+    margin: 1em auto 0 auto;
+}
+.asat-group.disabled:hover{
+    border: 1px solid #FFA500;
+}
+.asat-group.enabled {
+    background-color: #FFA500;
+    color: white;
+    border: 1px solid #FFA500 !important;
+
+}
+span.asat-group-addon {
+    font-size: 14px;
+    margin: 0 0 0 1em;
+    pointer-events: none;
+    vertical-align: middle;
+}
+.asat-group-addon.disabled:hover {
+    border-color: #FFA500;
+}
+.asat-group-addon > i {
+    margin: 0 1em 0 0;
 }
 /*============================================== /
 / ================== UPDATE ================== /
