--- a/css/asat.css
+++ b/css/asat.css
@@ -52,7 +52,7 @@ nav {
     top: 50px;
     background-color: #3694D1;
     border-radius: 0;
-    width: 180px;
+    width: 160px;
     height: 100%;
     float: left;
     display: inline;
@@ -88,7 +88,7 @@ nav a.selected {
 / ============================================== */
 
 section {
-    padding-left: 210px;
+    padding-left: 190px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -182,7 +182,7 @@ article.action.console {
     width: 66%;
     left: 17%;
 }
-.breadcrumb-row.deployment:after {
+.breadcrumb-row.depl:after {
     width: 75%;
     left: 12%;
 }
@@ -194,7 +194,7 @@ article.action.console {
 .breadcrumb-table.firewall td {
     width: 33%;
 }
-.breadcrumb-table.deployment td {
+.breadcrumb-table.depl td {
     width: 25%;
 }
 /*============================================== /
@@ -293,11 +293,11 @@ input {
     background-color: #789FB6;
     color: #FFF;
 }
-i.fa.deployment {
+i.fa.depl {
     min-width: 200px;
     margin: 1em 0;
 }
-i.fa.deployment.disabled {
+i.fa.depl.disabled {
     color: gray;
 }
 i.fa.enabled {
@@ -306,17 +306,17 @@ i.fa.enabled {
 i.fa.enabled>span {
     color: #000;
 }
-.deployment.dropdown {
+.depl.dropdown {
     margin-left: -1em;
 }
-.deployment.input-group {
+.depl.input-group {
     width: 320px;
     display: inline-table;
     vertical-align: middle;
     margin: 5px 0;
 
 }
-.deployment.input-group.first {
+.depl.input-group.first {
     margin-left: 200px;
 }
 /*============================================== /
@@ -367,10 +367,10 @@ i.fa.enabled>span {
 /*============================================== /
 / ================== INPUT ===================== /
 / ============================================== */
-.isValid {
+/*.isValid {
     border: 1px solid #3694D1 !important;
     color: #3694D1;
-}
+}*/
 .isNotValid {
     border: 1px solid #c6403d !important;
     color: #c6403d;
@@ -414,7 +414,7 @@ i.fa.enabled>span {
 
 }
 span.asat-group-addon {
-    font-size: 14px;
+    font-size: 12px;
     margin: 0 0 0 1em;
     pointer-events: none;
     vertical-align: middle;
@@ -467,7 +467,7 @@ hr.history {
     margin: 0 2em;
     float: left;
 }
-.progress.deployment {
+.progress.depl {
     margin: auto;
 }
 /*============================================== /
@@ -529,8 +529,44 @@ hr.history {
     font-size: 0.9em !important;
 }
 
-
-
+/*============================================== /
+/ =================== DHCP ===================== /
+/ ============================================== */
+.dhcp-container {
+    margin: auto;
+    display: inline-block;
+}
+.input-group.dhcp {
+    float: left;
+    margin: 0.5em 2em 0.5em 2em;
+    width: 320px;
+    display: inline-table;
+    vertical-align: middle;
+}
+.input-group.dhcp-server{
+    margin-left: 2em;
+}
+.input-group.dhcp-checkbox{
+    width: 100%;
+    margin: 0 0 2em 2em;
+}
+.radio.dhcp{
+    display: inline;
+    margin: 0 0 0 2em;
+}
+.dropdown.dhcp {
+    margin-left: 158px;
+}
+.dropdown.dhcp > button {
+    width: 320px;
+}
+div.dhcp-server>div.dhcp {
+    float: none;
+    margin: 0.5em 0 0.5em 2em;
+}
+span.dropdown.dhcp>ul.dropdown-menu {
+    width: 320px;
+}
 /*============================================== /
 / =================== FOOTER =================== /
 / ============================================== */
