--- a/css/asat.css
+++ b/css/asat.css
@@ -340,6 +340,12 @@ i.fa.enabled>span {
 .asat-table>tbody>tr:hover {
  background-color: white;
 }
+.asat-table>tbody>tr>td>.asat-table-input.disabled,
+.asat-table>tbody>tr>td>.asat-table-input.disabled:focus
+.asat-table>tbody>tr:hover>td>.asat-table-input.disabled,
+.asat-table>tbody>tr:hover>td>.asat-table-input.disabled:focus {
+    background-color: #F0F0F4;
+}
 .asat-table>tbody>tr {
     border: 1px solid transparent;
     border-top: 1px solid gray;
@@ -355,9 +361,10 @@ i.fa.enabled>span {
     border-bottom: 1px solid gray;
     text-align: end;
 }
-.asat-table-input:hover, .asat-table-input:focus {
+.asat-table-input, .asat-table-input:focus {
     background-color: white;
 }
+
 .asat-table>tbody>tr>td {
     vertical-align: middle;
 }
